# dataframe-speed-comparison

./: Dockerfile  README.md  pyproject.toml
dataframe_speed_comparison/: main.py
polars_testing/: main.py  polars_example.py  utils.py
