[tool.poetry]
name = "polars-testing"
version = "0.1.0"
description = "Testing the timings of polars"
authors = ["Stephen Nicholson <stephennicholson14@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.18.15"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
