[tool.poetry]
name = "dataframe_speed_comparison"
version = "0.1.0"
description = "Testing the timings of dataframe libraries"
authors = ["Stephen Nicholson <stephennicholson14@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.18.15"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
duckdb = "^0.10.2"
pandas = "^2.2.2"
seaborn = "^0.13.2"
ruff = "^0.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pylint = "^2.17.5"

[tool.poetry.scripts]
polars_test = 'dataframe_speed_comparison.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
